--- a/demo/templates/about-you.html
+++ b/demo/templates/about-you.html
@@ -19,12 +19,14 @@
                     <span id="timer" class="timing">30</span>
                 </div>
                 {% else %}
-                <div class="btns">
-                    <button class="record" onclick="$('#record').click();">Record</button>
-                    <input id="record" type="file" accept="video/*" class="record" capture="user" style="display: none;">
+                <form action="{% url 'demo:thanks' %}" method="post" class="btns">
+                    {% csrf_token %}
+                    <input id="record" type="file" accept="video/*" class="record" capture="user" style="display: none;" required>
+                    <button class="record" onclick="$('#record').click();" type="button">Record</button>
+                    <button id="send_record" class="record" type="submit" style="display: none">Send</button>
                     <br>
                     <span class="timing">We suggest you record for at least 30 seconds to achieve reasonable accuracy</span>
-                </div>
+                </form>
                 {% endif %}
 {#            {{ request.META.HTTP_USER_AGENT }}#}
                 <div class="clearfix"></div>
@@ -41,6 +43,10 @@
 {% csrf_token %}
 <script src="{% static "js/video_capture.js" %}"></script>
 {% else %}
-<script type="text/javascript"></script>
+<script type="text/javascript">
+$('#record').on('change', function () {
+    $('#send_record').click();
+});
+</script>
 {% endif %}
 {% endblock %}
