--- a/demo/templates/base_.html
+++ b/demo/templates/base_.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>talkmeup</title>
+        <title>Talk me up</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="On-demand, effective and personalized coaching on communication skills at 1/100th the cost of the world's best professional coaches.">
+        <meta property="og:url" content="​https://talkmeup.co/demo" />
         <meta property="og:title" content="How Charismatic Am I?" />
         <meta property="og:description" content="AI based analysis powered by TalkMeUp.co" />
-        <meta property="og:url" content="​https://talkmeup.co/demo" />
         {% load static %}<meta property="og:image" content="{% static 'images/logo.png' %}" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
